# mario_project

./: CMakeLists.txt
include/: gold.h  player.h
src/: gold.cpp  main.cpp  player.cpp
